--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   <body>
     <nav>
       <ul>
-        <li><a ui-sref="/">Home</a></li>
+        <li><a ui-sref="parent">Home</a></li>
+        <li><a ui-sref="parent.child">Child!</a></li>
       </ul>
     </nav>
     <h1>Multi-View Target Practice</h1>
