--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <ul>
         <li><a ui-sref="parent">Home</a></li>
         <li><a ui-sref="parent.child">Child!</a></li>
+        <li><a ui-sref="parent.child.grandchild">Grandkid</a></li>
       </ul>
     </nav>
     <h1>Multi-View Target Practice</h1>
